--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "connect-flash-plus": "^0.2.1",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
