--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "express-mongo-sanitize": "^2.0.0",
     "express-session": "^1.17.1",
     "express-validator": "^6.1.1",
+    "gridfs-stream": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "moment": "^2.28.0",
     "mongo-express-sanitize": "^1.0.1",
     "mongoose": "^5.10.5",
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
     "node-cron": "^2.0.3",
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.7.3",
@@ -36,7 +39,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
